// Copyright 2024 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

import "psi/apps/pir/apis/common.proto";

package pir;

enum PirBackend {
  BACKEND_UNKNOWN = 0;
  BACKEND_APSI = 1;
  BACKEND_SEAL_PIR = 2;
  BACKEND_KW_SEAL_PIR = 3;
}

message AlgorithmConfig {
  PirBackend backend_type = 1;
  uint64 ind_degree = 2;
  uint64 max_batch_query_size = 3;
}

message Schema {
  repeated Field keys = 1;
  repeated Field values = 2;
}

message Field {
  string name = 1;
  DataType type = 2;
}

message TlSConfig {
  // Certificate file path
  string certificate_path = 1;

  // Private key file path
  string private_key_path = 2;

  // The trusted CA file to verify the peer's certificate
  // If empty, use the system default CA files
  string ca_file_path = 3;
}

message MetricsConfig {
  uint32 port = 1;
}

message DataProxyLinkConfig {
  string data_proxy_addr = 1;

  TlSConfig tls_config = 2;
}

enum TableFileType {
  FILE_TYPE_UNKNOWN = 0;
  FILE_TYPE_CSV = 1;
}

message LocalTableConfig {
  TableFileType file_type = 1;
  string file_name = 2;
}

message DPDownLoadConfig {
  DataProxyLinkConfig link_config = 1;

  string domaindata_id = 2;

  // specific the partition column and value, such as "dmdt=20240520"
  string partition_spec = 3;
}

message DPUploadConfig {
  DataProxyLinkConfig link_config = 1;

  string domaindata_id = 2;

  string relative_uri = 3;

  string datasource_id = 4;
}

message InputTabelConfig {
  Schema schema = 1;

  oneof read_option {
    DPDownLoadConfig dp_config = 4;
    LocalTableConfig file_config = 5;
  }
}

message DBSaveConfig {
  // path to save the db file, MUST be specified
  string local_db_path = 1;

  // if domaindata_id is not emptys, will upload db_file to dp
  DPUploadConfig db_upload_dst = 2;
}

message PirPreprocessTaskConfig {
  InputTabelConfig input = 1;

  DBSaveConfig db_save_config = 2;

  AlgorithmConfig algorithm_config = 3;
}

message LocalDBConfig {
  string db_path = 1;
}

message DBLoadConfig {
  oneof load_config {
    LocalDBConfig local_db_config = 1;
    DPDownLoadConfig dp_down_load_config = 2;
  }
}

message PirServerConfig {
  string id = 1;

  string host = 2;

  uint32 server_port = 3;

  TlSConfig tls_config = 4;

  uint32 num_threads = 5;

  oneof data_config {
    InputTabelConfig table_config = 6;

    DBLoadConfig db_load_config = 7;
  }

  MetricsConfig metrics_config = 8;

  AlgorithmConfig algorithm_config = 9;
}

message PirClientConfig {
  string id = 1;
  string host = 2;
  uint32 port = 3;

  string server_id = 4;
  string server_address = 5;

  MetricsConfig metrics_config = 6;

  TlSConfig tls_config = 7;

  // if set to true, the response table will include the keys in the query table
  // if not set or false, the response table will not include the keys in the
  // query table
  bool response_include_keys = 8;

  // for check
  AlgorithmConfig algorithm_config = 9;
}
